# VeriNet

./: README.md  forward.py  protocol.py  pyproject.toml  requirements.txt  scoring.py
api/: server.py
benchmarks/: fever_loader.py
neurons/: miner.py  validator.py
passport/: __init__.py
retrieval/: citation_checker.py  retriever.py
scripts/: run_api.sh  run_miner.sh  run_ui.sh  run_validator.sh  setup_local.sh  verify_human.sh
ui/webapp/: package-lock.json
ui/webapp/app/: globals.css  layout.tsx  page.tsx
ui/webapp/app/api/passport/status/[address]/: route.ts
ui/webapp/app/api/verify/: route.ts
ui/webapp/app/api/waap/login/: route.ts
ui/webapp/app/api/waap/logout/: route.ts
ui/webapp/app/api/waap/signup/: route.ts
ui/webapp/app/api/waap/status/: route.ts
verinet/: __init__.py  forward.py  protocol.py  scoring.py
waap/: __init__.py
