[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verinet-subnet"
version = "1.0.0"
description = "VeriNet — Decentralized Fact-Verification Subnet for Bittensor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "bittensor>=8.0.0",
    "bittensor-wallet>=2.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
api = []
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["verinet*", "retrieval*", "benchmarks*", "api*", "neurons*", "waap*", "passport*"]
